# core

./: Cargo.toml  README.md  create_wasm.sh
.github/workflows/: publish.yml  rust.yml
docs/: ini-file-deduction.md
fixtures/: config.ini
src/: ini.pest  lib.rs  main.rs
tests/: integration_test.rs  lib_test.rs  node.rs  web.rs
tests/fixtures/: config.ini
