[package]
name = "one_ini"
version = "0.1.0"
description = "Parse EditorConfig-INI file contents into AST"
authors = ["Jed Mao <jedmao@outlook.com>", "Florian Breisch <florian.breisch@mindkeeper.solutions>"]
keywords = ["ini", "parser", "ast"]
categories = ["config", "parser-implementations", "wasm"]
edition = "2018"
repository = "https://github.com/florianb/one-ini"
documentation = "https://docs.rs/one_ini"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
wasm-bindgen = { version = "0.2.55", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
