[package]
authors = ["Jed Mao <jedmao@outlook.com>", "Joe Hildebrand <joe-github@cursive.net>", "Florian Neumann <florian.neumann@mindkeeper.solutions>"]
categories = ["config", "parser-implementations", "wasm"]
description = "Parse EditorConfig-INI file contents into AST"
documentation = "https://docs.rs/one-ini"
edition = "2021"
keywords = ["editorconfig", "ini", "parser", "ast"]
license = "MIT"
name = "one-ini"
publish = false
repository = "https://github.com/one-ini/core"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.4.0"
pest_derive = "2.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
